--- a/views/explorer.ejs
+++ b/views/explorer.ejs
@@ -55,7 +55,6 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="favorite">Favorite <span class="sr-only">(current)</span></a>
                                 </li>
-                                </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="contact">Contact <span class="sr-only">(current)</span></a>
                                 </li>
@@ -180,7 +179,7 @@
             <div class="explore-search-result">
                 <!-- Single Features Area -->
                 <div class="single-features-area">
-                    <img class='pic' onclick=map(lat[0]+lng[0]) src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P02000185_3.jpeg" alt="">
+                    <img class='pic' style="width:100%" onclick=map(lat[0]+lng[0]) src="">
                     <div class="feature-content d-flex align-items-center justify-content-between">
                         <div class="feature-title">
                             <a class="url">
@@ -195,7 +194,7 @@
                 </div>
                 <!-- Single Features Area -->
                 <div class="single-features-area">
-                    <img class='pic' onclick=map(lat[1]+lng[1]) src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P02012360_1.jpg" alt="">
+                    <img class='pic' style="width:100%" onclick=map(lat[1]+lng[1]) src="">
                     <div class="feature-content d-flex align-items-center justify-content-between">
                         <div class="feature-title">
                             <a class="url">
@@ -210,7 +209,7 @@
                 </div>
                 <!-- Single Features Area -->
                 <div class="single-features-area">
-                    <img class='pic' onclick=map(lat[2]+lng[2]) src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08013844_1.jpg" alt="">
+                    <img class='pic' style="width:100%" onclick=map(lat[2]+lng[2]) src="">
                     <div class="feature-content d-flex align-items-center justify-content-between">
                         <div class="feature-title">
                             <a class="url">
@@ -226,7 +225,7 @@
                 </div>
                 <!-- Single Features Area -->
                 <div class="single-features-area">
-                    <img class='pic' onclick=map(lat[3]+lng[3]) src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08013844_1.jpg" alt="">
+                    <img class='pic' style="width:100%" onclick=map(lat[3]+lng[3]) src="">
                     <div class="feature-content d-flex align-items-center justify-content-between">
                         <div class="feature-title">
 
@@ -243,7 +242,7 @@
                 </div>
                 <!-- Single Features Area -->
                 <div class="single-features-area">
-                    <img class='pic' onclick=map(lat[4]+lng[4]) src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08013844_1.jpg" alt="">
+                    <img class='pic' style="width:100%" onclick=map(lat[4]+lng[4]) src="">
                     <div class="feature-content d-flex align-items-center justify-content-between">
                         <div class="feature-title">
                             <a class="url">
@@ -253,7 +252,7 @@
                             <p class="destination"></p>
                         </div>
                         <div class="feature-favourite">
-                            <a onclick=fav(4)></a><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                            <a onclick=fav(4)><i class="fa fa-heart-o" aria-hidden="true"></i></a>
                         </div>
                     </div>
                 </div>
