--- a/views/favorite.ejs
+++ b/views/favorite.ejs
@@ -82,75 +82,144 @@
             <div class="row" id="row">
                 <!-- Single Features Area -->
                 <div class="col-12 col-sm-6 col-lg-4">
-                    <div class="single-features-area mb-50">
-                        <!-- <img src="img/bg-img/feature-1.jpg" alt=""> -->
-                        <img class="pic" src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08012272_1.jpeg" alt="">
+                    <div class="result single-features-area mb-50" style="display: none">
+                        <img class="pic" style="width:100%" src="" >
                         <div class="feature-content d-flex align-items-center justify-content-between">
                             <div class="feature-title">
-                                <h5 class="name" >Treat Cafe & Hang Out</h5>
-                                <p class="destination">Bangkok</p>
+                                <h5 class="name"></h5>
+                                <p class="destination"></p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <!-- Single Features Area -->
                 <div class="col-12 col-sm-6 col-lg-4">
-                    <div class="single-features-area mb-50">
-                        <!-- <img src="img/bg-img/feature-2.jpg" alt=""> -->
-                        <img class="pic" src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P08013955_1.png" alt="">
+                    <div class="result single-features-area mb-50" style="display: none">
+                        <img class="pic" style="width:100%" src="">
                         <div class="feature-content d-flex align-items-center justify-content-between">
                             <div class="feature-title">
-                                <h5 class="name" >Cafe Jardin</h5>
-                                <p class="destination">Bangkok</p>
+                                <h5 class="name"></h5>
+                                <p class="destination"></p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <!-- Single Features Area -->
                 <div class="col-12 col-sm-6 col-lg-4">
-                    <div class="single-features-area mb-50">
-                        <!-- <img src="img/bg-img/feature-3.jpg" alt=""> -->
-                        <img class="pic" src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P08013903_1.png" alt="">
+                    <div class="result single-features-area mb-50" style="display: none">
+                        <img class="pic" style="width:100%" src="">
                         <div class="feature-content d-flex align-items-center justify-content-between">
                             <div class="feature-title">
-                                <h5 class="name">SEIRYU Sushi</h5>
-                                <p>Bangkok</p>
+                                <h5 class="name"></h5>
+                                <p class="destination"></p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <!-- Single Features Area -->
                 <div class="col-12 col-sm-6 col-lg-4">
-                    <div class="single-features-area mb-50">
-                        <img class="pic" src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P08013963_1.png" alt="">
+                    <div class="result single-features-area mb-50" style="display: none">
+                        <img class="pic" style="width:100%" src="">
                         <div class="feature-content d-flex align-items-center justify-content-between">
                             <div class="feature-title">
-                                <h5 class="name">9ban Cafe & Kanom Thai</h5>
-                                <p>Songkla</p>
+                                <h5 class="name"></h5>
+                                <p class="destination"></p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <!-- Single Features Area -->
                 <div class="col-12 col-sm-6 col-lg-4">
-                    <div class="single-features-area mb-50">
-                        <img class="pic" src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08013835_1.jpg" alt="">
+                    <div class="result single-features-area mb-50" style="display: none">
+                        <img class="pic" style="width:100%" src="">
                         <div class="feature-content d-flex align-items-center justify-content-between">
                             <div class="feature-title">
-                                <h5 class="name">Bicycle Cafe</h5>
-                                <p>Kanjanaburi</p>
+                                <h5 class="name"></h5>
+                                <p class="destination"></p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <!-- Single Features Area -->
                 <div class="col-12 col-sm-6 col-lg-4">
-                    <div class="single-features-area mb-50">
-                        <img class="pic" src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P08012291_1.png">
+                    <div class="result single-features-area mb-50" style="display: none">
+                        <img class="pic" style="width:100%" src="">
                         <div class="feature-content d-flex align-items-center justify-content-between">
                             <div class="feature-title">
-                                <h5 class="name">100 Mahaseth</h5>
-                                <p>Bangkok</p>
+                                <h5 class="name"></h5>
+                                <p class="destination"></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Single Features Area -->
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="result single-features-area mb-50" style="display: none">
+                        <img class="pic" style="width:100%" src="">
+                        <div class="feature-content d-flex align-items-center justify-content-between">
+                            <div class="feature-title">
+                                <h5 class="name"></h5>
+                                <p class="destination"></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Single Features Area -->
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="result single-features-area mb-50" style="display: none">
+                        <img class="pic" style="width:100%" src="">
+                        <div class="feature-content d-flex align-items-center justify-content-between">
+                            <div class="feature-title">
+                                <h5 class="name"></h5>
+                                <p class="destination"></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Single Features Area -->
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="result single-features-area mb-50" style="display: none">
+                        <img class="pic" style="width:100%" src="">
+                        <div class="feature-content d-flex align-items-center justify-content-between">
+                            <div class="feature-title">
+                                <h5 class="name"></h5>
+                                <p class="destination"></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Single Features Area -->
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="result single-features-area mb-50" style="display: none">
+                        <img class="pic" style="width:100%" src="">
+                        <div class="feature-content d-flex align-items-center justify-content-between">
+                            <div class="feature-title">
+                                <h5 class="name"></h5>
+                                <p class="destination"></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Single Features Area -->
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="result single-features-area mb-50" style="display: none">
+                        <img class="pic" style="width:100%" src="">
+                        <div class="feature-content d-flex align-items-center justify-content-between">
+                            <div class="feature-title">
+                                <h5 class="name"></h5>
+                                <p class="destination"></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Single Features Area -->
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="result single-features-area mb-50" style="display: none">
+                        <img class="pic" style="width:100%" src="">
+                        <div class="feature-content d-flex align-items-center justify-content-between">
+                            <div class="feature-title">
+                                <h5 class="name"></h5>
+                                <p class="destination"></p>
                             </div>
                         </div>
                     </div>
