--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -129,7 +129,7 @@
                         <textarea name="message" id="message" class="form-control" id="Message" cols="30" rows="10" placeholder="Your Message"></textarea>
                     </div>
                     <div class="col-12">
-                        <button class="btn dorne-btn" id="submit" >Send</button>
+                        <button class="btn dorne-btn" id="send" >Send</button>
                     </div>
                 </div>
             </div>
@@ -155,7 +155,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
     <!-- <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-analytics.js"></script> -->
     <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-auth.js"></script>
-    <!-- <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-firestore.js"></script> -->
+    <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-firestore.js"></script>
     <!-- authen -->
     <script src="js/authen.js"></script>
 </body>
