--- a/views/favorite.ejs
+++ b/views/favorite.ejs
@@ -239,6 +239,9 @@
     <script src="js/api_getfavorite.js"></script>
     <!-- Active JS -->
     <script src="js/active.js"></script>
+    <!-- Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-auth.js"></script>
     <script>
         displayfavorite()
     </script>
