--- a/views/register.ejs
+++ b/views/register.ejs
@@ -71,7 +71,7 @@
                                     <form class="px-4 py-3">
                                       <div class="form-group">
                                         <label for="exampleDropdownFormEmail1">Email address</label>
-                                        <input type="email" class="form-control" id="emaillogin" placeholder="email@example.com" value="q@q.com">
+                                        <input type="email" class="form-control" id="emaillogin" placeholder="email@example.com" value="qwer@qwer.com">
                                       </div>
                                       <div class="form-group">
                                         <label for="exampleDropdownFormPassword1">Password</label>
@@ -156,8 +156,8 @@
     <script src="js/others/plugins.js"></script>
     <!-- Active JS -->
     <script src="js/active.js"></script>
+    <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
-    <!-- <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-analytics.js"></script> -->
     <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-auth.js"></script>
     <!-- <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-firestore.js"></script> -->
     <!-- Authen -->
