--- a/views/register.ejs
+++ b/views/register.ejs
@@ -20,22 +20,6 @@
     <div id="preloader">
         <div class="dorne-load"></div>
     </div>
-    <!-- ***** Search Form Area ***** -->
-    <div class="dorne-search-form d-flex align-items-center">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="search-close-btn" id="closeBtn">
-                        <i class="pe-7s-close-circle" aria-hidden="true"></i>
-                    </div>
-                    <form action="#" method="get">
-                        <input type="search" name="caviarSearch" id="search" placeholder="Search Your Desire Destinations or Events">
-                        <input type="submit" class="d-none" value="submit">
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
     <!-- ***** Header Area Start ***** -->
     <header class="header_area" id="header">
         <div class="container-fluid h-100">
@@ -61,7 +45,7 @@
                                 </li>
                             </ul>
                             <!-- profile -->
-                            <div class="dorne-signin-btn" id="navprofile" style="display: none;">
+                            <div class="nav-link" id="navprofile" style="display: none;">
                                 <a href="#">Welcome name</a>
                             </div>
                             <!-- Sign in -->
@@ -159,7 +143,7 @@
     <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-auth.js"></script>
-    <!-- <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-firestore.js"></script> -->
+    <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-firestore.js"></script>
     <!-- Authen -->
     <script src="js/authen.js"></script>
 </body>
