--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -60,9 +60,13 @@
                                     <a class="nav-link" href="contact">Contact <span class="sr-only">(current)</span></a>
                                 </li>
                             </ul>
-                            <!-- Signin btn -->
-                            <div class="btn-group dorne-signin-btn" id="navsignin">
-                                <a href="#"  class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sign in  or  Sign up</a>
+                            <!-- profile -->
+                            <div class="nav-link" id="navprofile" style="display: none;">
+                                <a href="#">Welcome name</a>
+                            </div>
+                            <!-- Sign in -->
+                            <div class="btn-group dorne-signin-btn" id="navsignin" style="display: none;">
+                                <a href="#"  class="dropdown-toggle " data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sign in  or  Sign up</a>
                                 <div class="dropdown-menu">
                                     <form class="px-4 py-3">
                                       <div class="form-group">
@@ -82,12 +86,13 @@
                                       <button type="button" value="signin" name="signin" id="signin" class="btn dorne-btn">Sign in</button>
                                     </form>
                                     <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="/register">New around here? Sign up</a>
+                                    <!-- <a class="dropdown-item" href="/register">New around here? Sign up</a> -->
                                     <a class="dropdown-item" href="#">Forgot password?</a>
                                 </div>
                             </div>
-                            <div class="dorne-signin-btn">
-                                <a id="navsignout">Sign out</a>
+                            <!-- Sign out -->
+                            <div class="dorne-signin-btn" id="navsignout">
+                                <a href="#">Sign out</a>
                             </div>
                         </div>
                     </nav>
@@ -152,12 +157,12 @@
     <script src="js/google-map/contact-map.js"></script>
     <!-- Active JS -->
     <script src="js/active.js"></script>
-    <!-- firebase -->
+    <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
     <!-- <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-analytics.js"></script> -->
     <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-firestore.js"></script>
-    <!-- authen -->
+    <!-- Authen -->
     <script src="js/authen.js"></script>
 </body>
 <script>
