--- a/views/single-listing.ejs
+++ b/views/single-listing.ejs
@@ -60,6 +60,40 @@
                                     <a class="nav-link" href="contact">Contact <span class="sr-only">(current)</span></a>
                                 </li>
                             </ul>
+                            <!-- profile -->
+                            <div class="nav-link" id="navprofile" style="display: none;">
+                                <a href="#">Welcome name</a>
+                            </div>
+                            <!-- Sign in -->
+                            <div class="btn-group dorne-signin-btn" id="navsignin" style="display: none;">
+                                <a href="#"  class="dropdown-toggle " data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sign in  or  Sign up</a>
+                                <div class="dropdown-menu">
+                                    <form class="px-4 py-3">
+                                      <div class="form-group">
+                                        <label for="exampleDropdownFormEmail1">Email address</label>
+                                        <input type="email" class="form-control" id="emaillogin" placeholder="email@example.com" value="qwer@qwer.com">
+                                      </div>
+                                      <div class="form-group">
+                                        <label for="exampleDropdownFormPassword1">Password</label>
+                                        <input type="password" class="form-control" id="passlogin" placeholder="Password" value="123456">
+                                      </div>
+                                      <!-- <div class="form-check">
+                                        <input type="checkbox" class="form-check-input" id="dropdownCheck">
+                                        <label class="form-check-label" for="dropdownCheck">
+                                          Remember me
+                                        </label>
+                                      </div> -->
+                                      <button type="button" value="signin" name="signin" id="signin" class="btn dorne-btn">Sign in</button>
+                                    </form>
+                                    <div class="dropdown-divider"></div>
+                                    <!-- <a class="dropdown-item" href="/register">New around here? Sign up</a> -->
+                                    <a class="dropdown-item" href="#">Forgot password?</a>
+                                </div>
+                            </div>
+                            <!-- Sign out -->
+                            <div class="dorne-signin-btn" id="navsignout">
+                                <a href="#">Sign out</a>
+                            </div>
                         </div>
                     </nav>
                 </div>
@@ -167,5 +201,11 @@
     <script src="js/active.js"></script>
     <!-- api_place JS -->
     <script src="js/api_single.js"></script>
+    <!-- Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-firestore.js"></script>
+    <!-- Authen -->
+    <script src="js/authen.js"></script>
 </body>
 </html>
