--- a/views/favorite.ejs
+++ b/views/favorite.ejs
@@ -269,8 +269,6 @@
     <script src="js/bootstrap/bootstrap.min.js"></script>
     <!-- All Plugins js -->
     <script src="js/others/plugins.js"></script>
-    <!-- Api GetFavorite -->
-    <script src="js/api_getfavorite.js"></script>
     <!-- Active JS -->
     <script src="js/active.js"></script>
     <!-- Firebase -->
@@ -279,8 +277,17 @@
     <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-firestore.js"></script>
     <!-- Authen -->
     <script src="js/authen.js"></script>
+    <!-- Api Favorite -->
+    <script src="js/api_favorite.js"></script>
+    
+    
     <script>
-        displayfavorite()
+        // console.log(getfav())
+        
+        // $(window).load(function () {
+        //     display()
+        // });
+        // displayfavorite()
     </script>
 </body>
 
