--- a/views/explorer.ejs
+++ b/views/explorer.ejs
@@ -222,7 +222,7 @@
                             <p class="destination"></p>
                         </div>
                         <div class="feature-favourite">
-                            <a onclick=fav(place_id[0])><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                            <a onclick=fav(arr,place_id[0])><i class="fa fa-heart-o" aria-hidden="true"></i></a>
                         </div>
                     </div>
                 </div>
@@ -237,7 +237,7 @@
                             <p class="destination"></p>
                         </div>
                         <div class="feature-favourite">
-                            <a onclick=fav(place_id[1])><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                            <a onclick=fav(arr,place_id[1])><i class="fa fa-heart-o" aria-hidden="true"></i></a>
                         </div>
                     </div>
                 </div>
@@ -253,7 +253,7 @@
                             <p class="destination"></p>
                         </div>
                         <div class="feature-favourite">
-                            <a onclick=fav(place_id[2])><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                            <a onclick=fav(arr,place_id[2])><i class="fa fa-heart-o" aria-hidden="true"></i></a>
                         </div>
                     </div>
                 </div>
@@ -270,7 +270,7 @@
                             <p class="destination"></p>
                         </div>
                         <div class="feature-favourite">
-                            <a onclick=fav(place_id[3])><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                            <a onclick=fav(arr,place_id[3])><i class="fa fa-heart-o" aria-hidden="true"></i></a>
                         </div>
                     </div>
                 </div>
@@ -286,7 +286,7 @@
                             <p class="destination"></p>
                         </div>
                         <div class="feature-favourite">
-                            <a onclick=fav(place_id[4])><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                            <a onclick=fav(arr,place_id[4])><i class="fa fa-heart-o" aria-hidden="true"></i></a>
                         </div>
                     </div>
                 </div>
@@ -321,7 +321,7 @@
     <!-- Api Favorite -->
     <script src="js/api_favorite.js"></script>
     <script>
-        setup();
+        setupexplorer();
         // readcookie();
     </script>
 </body>
