--- a/views/favorite.ejs
+++ b/views/favorite.ejs
@@ -109,7 +109,7 @@
                     <div class="section-heading dark text-center">
                         <span></span>
                         <h4>Favorite</h4>
-                        <p></p>
+                        <p id="favtitle"></p>
                     </div>
                 </div>
             </div>
@@ -279,15 +279,8 @@
     <script src="js/authen.js"></script>
     <!-- Api Favorite -->
     <script src="js/api_favorite.js"></script>
-    
-    
     <script>
-        // console.log(getfav())
-        
-        // $(window).load(function () {
-        //     display()
-        // });
-        // displayfavorite()
+        setupfavorite()
     </script>
 </body>
 
