--- a/views/single-listing.ejs
+++ b/views/single-listing.ejs
@@ -134,6 +134,7 @@
                         </div>
                         <div class="overview-content mt-50">
                             <p id="overview"></p>
+                            <p id="detail"></p>
                         </div>
                         <div class="location-on-map mt-50" id="lomap">
                             <h4>Location on map</h4>
