--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -43,11 +43,9 @@
             </div>
             <div class="column">
                 <form>
-
-                    <h4> document</h4>
+                    <h4> Logger</h4>
                     <p id='log'> </p>
                 </form>
-
             </div>
         </div>
     </main>
