--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -43,16 +43,61 @@
             </div>
             <div class="column">
                 <form>
-                    <h3> Logger </h3>
                     <h5> Document </h5>
                     <p id='log'> </p>
                     <h5>Result </h5>
                     <p id='result'> </p>
+                    <table style="width:100%">
+                        <tr>
+                            <th>document</th>
+                            <th>email</th>
+                            <th>message</th>
+                            <th>name</th>
+                            <th>subject</th>
+                        </tr>
+                        <tr>
+                            <td id='1'></td>
+                            <td id='2'></td>
+                            <td id='3'></td>
+                            <td id='4'></td>
+                            <td id='5'></td>
+                        </tr>
+
+                    </table>
 
 
                     <button id="refreshBtn" class="btn waves-effect red darken-1">refresh</button>
                 </form>
             </div>
+            <!-- <div class="column">
+                <form>
+                    <h3> Logger </h3>
+                    <h5> Document </h5>
+                    <p id='log'> </p>
+                    <h5>Result </h5>
+                    <p id='result'> </p>
+                    <table style="width:100%">
+                        <tr>
+                            <th>document</th>
+                            <th>email</th>
+                            <th>message</th>
+                            <th>name</th>
+                            <th>subject</th>
+                        </tr>
+                        <tr>
+                            <td id='1'></td>
+                            <td id='2'></td>
+                            <td id='3'></td>
+                            <td id='4'></td>
+                            <td id='5'></td>
+                        </tr>
+
+                    </table>
+
+
+                    <button id="refreshBtn" class="btn waves-effect red darken-1">refresh</button>
+                </form>
+            </div> -->
         </div>
     </main>
 
