--- a/views/favorite.ejs
+++ b/views/favorite.ejs
@@ -85,8 +85,8 @@
                                       <button type="button" value="signin" name="signin" id="signin" class="btn dorne-btn">Sign in</button>
                                     </form>
                                     <div class="dropdown-divider"></div>
-                                    <!-- <a class="dropdown-item" href="/register">New around here? Sign up</a> -->
-                                    <a class="dropdown-item" href="#">Forgot password?</a>
+                                    <a class="dropdown-item" href="/register">New around here? Sign up</a>
+                                    <!-- <a class="dropdown-item" href="#">Forgot password?</a> -->
                                 </div>
                             </div>
                             <!-- Sign out -->
