--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -17,87 +17,64 @@
 <body>
     <main>
 
-        <div id=a lass="row">
-            <div class="column">
+
+        <div lass="row">
+
+            <!-- <div class="column">
                 <form>
                     <label for="document">document</label><br>
                     <input type="text" name="doc" id="doc"><br>
 
-                    <label for="email">email</label><br>
-                    <input type="text" name="email" id="email"><br>
-
-                    <label for="message">message</label><br>
-                    <input type="text" name="message" id="message"><br>
-
                     <label for="name">name</label><br>
                     <input type="text" name="name" id="name"><br>
 
+                    <label for="email">email</label><br>
+                    <input type="text" name="email" id="email"><br>
+
                     <label for="subject">subject</label><br>
                     <input type="text" name="subject" id="subject"><br>
+
+                    <label for="message">message</label><br>
+                    <input type="text" name="message" id="message"><br>
 
                     <button id="send" class="btn waves-effect waves-light">add</button>
                     <button id="updateBtn" class="btn waves-effect waves-light">Update</button>
                     <button id="readBtn" class="btn waves-effect waves-light">Read</button>
                     <button id="removeBtn" class="btn waves-effect red darken-1">Remove</button>
-                </form>
-            </div>
-            <div class="column">
-                <form>
-                    <h5> Document </h5>
-                    <p id='log'> </p>
-                    <h5>Result </h5>
-                    <p id='result'> </p>
-                    <table style="width:100%">
-                        <tr>
-                            <th>document</th>
-                            <th>email</th>
-                            <th>message</th>
-                            <th>name</th>
-                            <th>subject</th>
-                        </tr>
-                        <tr>
-                            <td id='1'></td>
-                            <td id='2'></td>
-                            <td id='3'></td>
-                            <td id='4'></td>
-                            <td id='5'></td>
-                        </tr>
 
-                    </table>
-
-
-                    <button id="refreshBtn" class="btn waves-effect red darken-1">refresh</button>
-                </form>
-            </div>
-            <!-- <div class="column">
-                <form>
-                    <h3> Logger </h3>
-                    <h5> Document </h5>
-                    <p id='log'> </p>
-                    <h5>Result </h5>
-                    <p id='result'> </p>
-                    <table style="width:100%">
-                        <tr>
-                            <th>document</th>
-                            <th>email</th>
-                            <th>message</th>
-                            <th>name</th>
-                            <th>subject</th>
-                        </tr>
-                        <tr>
-                            <td id='1'></td>
-                            <td id='2'></td>
-                            <td id='3'></td>
-                            <td id='4'></td>
-                            <td id='5'></td>
-                        </tr>
-
-                    </table>
-
-
-                    <button id="refreshBtn" class="btn waves-effect red darken-1">refresh</button>
                 </form>
             </div> -->
+
+            <div class="column">
+                <form>
+                    <!-- <h5> Document </h5>
+                 
+                <p id='log'> </p> -->
+                    <h5>Result </h5>
+                    <p id='result'> </p>
+                    <table style="width:100%">
+                        <tr>
+                            <th>document</th>
+                            <th>name</th>
+                            <th>email</th>
+                            <th>subject</th>
+                            <th>message</th>
+                        </tr>
+                        <tr>
+                            <td id='1'></td>
+                            <td id='2'></td>
+                            <td id='3'></td>
+                            <td id='4'></td>
+                            <td id='5'></td>
+                        </tr>
+
+                    </table>
+
+
+                    <button id="refreshBtn" class="btn waves-effect red darken-1">refresh</button>
+                </form>
+            </div>
+
         </div>
     </main>
 
