--- a/views/favorite.ejs
+++ b/views/favorite.ejs
@@ -109,6 +109,7 @@
                     <div class="section-heading dark text-center">
                         <span></span>
                         <h4>Favorite</h4>
+                        <div class="fa fa-trash" style="float: right;" onclick=delfav()></div>
                         <p id="favtitle"></p>
                     </div>
                 </div>
@@ -267,6 +268,8 @@
     <script src="js/bootstrap/popper.min.js"></script>
     <!-- Bootstrap-4 js -->
     <script src="js/bootstrap/bootstrap.min.js"></script>
+    <!-- Bootstrap-Notify -->
+    <script src="js/bootstrap/bootstrap-notify.min.js"></script>
     <!-- All Plugins js -->
     <script src="js/others/plugins.js"></script>
     <!-- Active JS -->
