--- a/views/index.ejs
+++ b/views/index.ejs
@@ -510,6 +510,8 @@
     <script src="js/bootstrap/popper.min.js"></script>
     <!-- Bootstrap-4 js -->
     <script src="js/bootstrap/bootstrap.min.js"></script>
+    <!-- Bootstrap-Notify -->
+    <script src="js/bootstrap/bootstrap-notify.min.js"></script>
     <!-- All Plugins js -->
     <script src="js/others/plugins.js"></script>
     <!-- Active JS -->
