real real final

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -54,7 +54,7 @@
                     <p id='result'> </p>
                     <table style="width:100%">
                         <tr>
-                            <th>document</th>
+                            <th>ticket</th>
                             <th>name</th>
                             <th>email</th>
                             <th>subject</th>
